# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Added a line to make sure we remove image.squashfs as well as the other loop
  names used by catalyst.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
  Added another patch from Javier Miqueleiz <javier@miqueleiz.com> in bug
  #198892 for mdadm 1.1 and 1.2 metadata support.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.defaults, generic/initrd.scripts, generic/linuxrc:
  Switch to detection for LOOP and LOOPTYPE when they are not set.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc:
  Performed some minor cleanup.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc:
  Move "busybox --install -s" to outside the /init check. Fix problems with
  running mknod on a non-CD root filesystem, which will be read-only, for bug
  #208266.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> -um/kernel-config-2.4,
  -alpha/kernel-config-2.4, -parisc64/kernel-config-2.4,
  -xenU/kernel-config-2.4, -parisc/kernel-config-2.4,
  -x86/kernel-config-2.4, -xen0/kernel-config-2.4:
  Removing 2.4 kernel configs, since we aren't supporting 2.4 from here on out.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> genkernel:
  We only need to make sure that we have /sbin and /usr/sbin in our PATH for
  bug #97378, not reset it. Thanks to Justin Bronder <jsbronder@gentoo.org> in
  bug #209182 for pointing it out. This is genkernel 3.4.10_pre1 for testing.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
  generic/initrd.scripts, generic/linuxrc, genkernel, genkernel.conf,
  mips/config.sh:
  This is the long-awaited unionfs code cleanup. All of the unionfs code in