@@ -245,8 +245,8 @@ has_loop() {
 	fi
 	if [ -e '/dev/loop0' -o -e '/dev/loop/0' -a ${PIPESTATUS[1]} ]
 	then
-		# We found devfs or standard dev loop device, assume
-		# loop is compiled into the kernel or the module is loaded
+		# We found a standard dev loop device, assume loop is compiled into the
+		# kernel or the module is loaded
 		return 0
 	else
 		return 1
