@@ -207,9 +207,6 @@ Add in Luks support from static binaries if they exist on the
 system.
 .RE
 .TP
-\fB\-\-no-udev\fR
-Force devfs on 2.6 series kernels. Not recommended or supported.
-.TP
 \fB\-\-static\fR
 This builds a monolithic kernel without any modules on any initial ramdisks.
 .TP
