@@ -137,12 +137,6 @@ BUSYBOX_SRCTAR="${GK_SHARE}/pkg/busybox-${BUSYBOX_VER}.tar.bz2"
 BUSYBOX_DIR="busybox-${BUSYBOX_VER}"
 BUSYBOX_BINCACHE="%%CACHE%%/busybox-${BUSYBOX_VER}-%%ARCH%%.tar.bz2"
 
-DEVFSD_VER="1.3.25-dietlibc-kernel25"
-DEVFSD_SRCTAR="${GK_SHARE}/pkg/devfsd-${DEVFSD_VER}.tar.bz2"
-DEVFSD_DIR="devfsd"
-DEVFSD_BINCACHE="%%CACHE%%/devfsd-${DEVFSD_VER}-%%ARCH%%.bz2"
-DEVFSD_CONF_BINCACHE="%%CACHE%%/devfsd-conf-${DIETLIBC_VER}-%%ARCH%%.bz2"
-
 DEVICE_MAPPER_VER="VERSION_DMAP"
 DEVICE_MAPPER_DIR="device-mapper.${DEVICE_MAPPER_VER}"
 DEVICE_MAPPER_SRCTAR="${GK_SHARE}/pkg/device-mapper.${DEVICE_MAPPER_VER}.tgz"
